--- a/_posts/2015-02-10-ilk-yazi.md
+++ b/_posts/2015-02-10-ilk-yazi.md
@@ -1,8 +1,8 @@
 ---
-published: false
+published: true
 ---
 
-	baslikk
+baslikk
 post
 You're up and running!
 hi world###
@@ -16,4 +16,3 @@ hi world###
 hi
 hi
 hi
-
