--- a/_posts/2015-02-10-ilk-yazi.md
+++ b/_posts/2015-02-10-ilk-yazi.md
@@ -1,8 +1,11 @@
 ---
 published: true
+layout: post
 ---
 
-baslikk
+##  **_> - item
+- item
+- item_**baslikk
 post
 You're up and running!
 hi world###
